# ColorSegmenterTrainer

./: README.md
src/: CMakeLists.txt  Segmenter.h  mainSegmentador.cpp
